# tiny-libs

./: README.md
docs/: lib-introduction.md
libs/: CMakeLists.txt  README.md
libs/json/base64/: CMakeLists.txt  README.md  base64_main.c  common.h
libs/json/cjson/: CMakeLists.txt  README.md  cjson_main.c
libs/json/protobuf/: CMakeLists.txt  README.md  message.pb.cc  message.pb.h  message.proto  protobuf_main.cpp
libs/logging/gtest/: CMakeLists.txt  gtest_main.cc
libs/logging/gtest/code/: gtest-all.cc
libs/logging/spdlog/: CMakeLists.txt  README.md  spdlog_main.c
libs/logging/spdlog/code/: CMakeLists.txt  README.md
libs/logging/spdlog/code/adapter/: ModelLogger.cpp
libs/logging/spdlog/code/include/adapter/: ManageLogger.h
libs/logging/zlog/: CMakeLists.txt  README.md  zlog.conf  zlog_main.c
libs/logging/zlog/code/cmake/: LoadLibraries.cmake
libs/sql/sqlite3/: CMakeLists.txt  README.md  sqlite3_main.c
libs/sql/sqlite3/code/include/: sqlite3.h
libs/sql/sqlite3/code/src/: mysqlite.c
libs/usb/alsa/: README.md
libs/usb/hidapi/: CMakeLists.txt  README.md
libs/usb/libusb/: CMakeLists.txt
libs/usb/libusb-1.0.27/: CMakeLists.txt
libs/usb/libusb/libusb/: config.h
libs/usb/mouse/: m_main.c
scripts/: build.sh  run_app.sh
